--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: ezhilraj@example.com</p>
+    <p>Email: ezhilraj265@gmail.com</p>
     <p>GitHub: <a href="https://github.com/ezhilraj" target="_blank">ezhilraj</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/ezhilraj" target="_blank">ezhilraj</a></p>
+    <p>Instagram:<a href=" https://www.instagram.com/silent.poetry_11/"target="_blank">ezhilraj</a></p>
   </section>
 
   <footer>
